--- a/client/src/components/pages/landing/Landing.css
+++ b/client/src/components/pages/landing/Landing.css
@@ -1,5 +1,5 @@
 .landing {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(https://source.unsplash.com/collection/175083/1920x1080) center
       center/cover no-repeat;
   height: 100vh;
